Issue #129: Support for server-sent events (SSE)
Original PR #130 by @madeddie

This patch adds a proxy.flushinterval option which
enables periodic flushing of the repsonse buffer.

Since this is a global option and the implications on
non-streaming HTTP requests are unknown the current
implementation limits the use of the flush interval to
requests where the 'Accept' header is set to
'text/event-stream' which identifies SSE requests.

This is really a route specific option and should be
configured as such once this becomes possible.

--- a/fabio.properties
+++ b/fabio.properties
@@ -274,14 +274,17 @@
 # proxy.dialtimeout = 30s
 
 
-# proxy.flushinterval configures periodic flushing of the
-# response buffer for SSE (server-sent events) connections.
-# They are detected when the 'Accept' header is
-# 'text/event-stream'.
+# proxy.flushinterval configures periodic flushing of
+# the response buffer. The default is not to flush
+# the response buffer periodically.
+#
+# The current implementaiton exists to support SSE
+# (server-sent events) and sets the value only when
+# the 'Accept' header is 'text/event-stream'.
 #
 # The default is
 #
-# proxy.flushinterval = 1s
+# proxy.flushinterval = 0s
 
 
 # proxy.maxconn configures the maximum number of cached
